refactor: Deep clean project to Dad Lang syntax, fix builds and tests

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "node --loader ts-node/esm",
-    "build": "tsup src/* --dts --outDir bin"
+    "build": "tsup src/index.ts --dts --outDir bin"
   },
   "keywords": [
     "programming",
