--- a/packages/interpreter/package.json
+++ b/packages/interpreter/package.json
@@ -8,7 +8,7 @@
   "module": "dist/module.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsup src/* --dts",
+    "build": "tsup src/index.ts --dts",
     "test": "jest --coverage"
   },
   "keywords": [
